--- a/institution_angular/package.json
+++ b/institution_angular/package.json
@@ -31,6 +31,7 @@
     "@ng-bootstrap/ng-bootstrap": "^6.2.0",
     "@ng-select/ng-select": "^5.0.3",
     "@ngx-pwa/local-storage": "^12.0.0",
+    "@sweetalert2/themes": "^5.0.0",
     "alasql": "^1.7.2",
     "alasql-angular": "0.0.19",
     "bootstrap": "^4.6.0",
