--- a/institution_angular/angular.json
+++ b/institution_angular/angular.json
@@ -33,7 +33,8 @@
               "./node_modules/bootstrap-icons/font/bootstrap-icons.css",
               "./node_modules/boxicons/css/boxicons.min.css",
               "./node_modules/remixicon/fonts/remixicon.css",
-              "./node_modules/simple-line-icons/css/simple-line-icons.css"
+              "./node_modules/simple-line-icons/css/simple-line-icons.css",
+              "./node_modules/material-design-icons/iconfont/material-icons.css"
             ],
             "scripts": [],
             "vendorChunk": true,
