--- a/institution_angular/package.json
+++ b/institution_angular/package.json
@@ -40,10 +40,12 @@
     "deep-equal": "^2.0.5",
     "exceljs": "^4.2.1",
     "file-saver": "^2.0.2",
+    "hammerjs": "^2.0.8",
     "html2canvas": "^1.0.0-rc.5",
     "jspdf": "^2.3.1",
     "jspdf-autotable": "^3.5.3",
     "lodash": "^4.17.21",
+    "material-design-icons": "^3.0.1",
     "mousetrap": "^1.6.5",
     "ng2-completer": "^9.0.1",
     "ng2-search-filter": "^0.5.1",
