--- a/institution_angular/angular.json
+++ b/institution_angular/angular.json
@@ -34,7 +34,7 @@
               "./node_modules/boxicons/css/boxicons.min.css",
               "./node_modules/remixicon/fonts/remixicon.css",
               "./node_modules/simple-line-icons/css/simple-line-icons.css",
-              "./node_modules/material-design-icons/iconfont/material-icons.css"
+              "./node_modules/material-design-icons/iconfont/material-icons.css",
             ],
             "scripts": [],
             "vendorChunk": true,
