--- a/institution_angular/package.json
+++ b/institution_angular/package.json
@@ -34,6 +34,7 @@
     "@sweetalert2/themes": "^5.0.0",
     "alasql": "^1.7.2",
     "alasql-angular": "0.0.19",
+    "aos": "^2.3.4",
     "bootstrap": "^4.6.0",
     "bootstrap-icons": "^1.5.0",
     "boxicons": "^2.0.7",
