--- a/institution_angular/package.json
+++ b/institution_angular/package.json
@@ -41,6 +41,7 @@
     "deep-equal": "^2.0.5",
     "exceljs": "^4.2.1",
     "file-saver": "^2.0.2",
+    "force": "^0.0.3",
     "hammerjs": "^2.0.8",
     "html2canvas": "^1.0.0-rc.5",
     "jspdf": "^2.3.1",
@@ -72,7 +73,7 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1102.13",
+    "@angular-devkit/build-angular": "^0.901.15",
     "@angular/cli": "^12.0.0",
     "@angular/compiler-cli": "~12.0.0",
     "@angular/language-service": "~12.0.0",
